Add Icon to show AccountState.

--- a/ModelAgency.Web/Pages/Shared/_LoginPartial.cshtml
+++ b/ModelAgency.Web/Pages/Shared/_LoginPartial.cshtml
@@ -2,6 +2,15 @@
 @inject SignInManager<ModelAgency.Web.Data.Entities.ApplicationUser> SignInManager
 @inject UserManager<ModelAgency.Web.Data.Entities.ApplicationUser> UserManager
 
+@if (User.Identity.IsAuthenticated) {
+    @if (User.HasClaim(claim => claim.Type == "AccountState" && claim.Value == "Approved")) {
+        <i class="bi-check-circle"> Approved</i>
+    } else if (User.HasClaim(claim => claim.Type == "AccountState" && claim.Value == "Pending")) {
+        <i class="bi-clock"> Pending</i>
+    } else if (User.HasClaim(claim => claim.Type == "AccountState" && claim.Value == "Rejected")) {
+        <i class="bi-exclamation-circle"> Rejected</i>
+    }
+}
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User)) {
         <li class="nav-item">
