--- a/ModelAgency.Web/Pages/Shared/_LoginPartial.cshtml
+++ b/ModelAgency.Web/Pages/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using System.Security.Claims;
 @inject SignInManager<ModelAgency.Web.Data.Entities.ApplicationUser> SignInManager
 @inject UserManager<ModelAgency.Web.Data.Entities.ApplicationUser> UserManager
 
@@ -14,7 +15,8 @@
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User)) {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+            @*<a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>*@
+            <a class="nav-link text-dark" asp-page="/Profile" asp-route-id="@User.Claims.First(claim => claim.Type == ClaimTypes.NameIdentifier).Value" title="Profile">Hello @User.Identity.Name!</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
