--- a/ModelAgency.Web/Areas/Model/Pages/Profile/Index.cshtml
+++ b/ModelAgency.Web/Areas/Model/Pages/Profile/Index.cshtml
@@ -18,7 +18,7 @@
     @Model.Model.DOB.ToShortDateString() 
 </div>
 @foreach(var photo in Model.Model.Photos) {
-                <img src="@photo.Path" alt="photo"/>
+                <img src="/@photo.Path" alt="photo"/>
             }
 @foreach(var ev in Model.Events) {
     <div>
