--- a/ModelAgency.Web/Areas/Model/Pages/Profile/Edit.cshtml
+++ b/ModelAgency.Web/Areas/Model/Pages/Profile/Edit.cshtml
@@ -1,8 +1,10 @@
-﻿@page "/Model/{id}/Edit"
+﻿@page "/Model/{id}/Profile/Edit"
 @model ModelAgency.Web.Areas.Model.Pages.Profile.EditModel
 @{
     ViewData["Title"] = $"Edit {Model.Model.Name} Profile";
 }
+
+<div><a asp-area="Model" asp-page="Events/Index" asp-route-id="@Model.Model.Id">Manage Events</a></div>
 
 <form method="post">
     <div class="form-group">
@@ -17,8 +19,6 @@
     </div>
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
-
-<a asp-area="Model" asp-page="Events/Index" asp-route-id="@Model.Model.Id">Manage Events</a>
 
 @foreach (var photo in Model.Model.Photos) {
     <img src="/@photo.Path" />
